--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -9,13 +9,11 @@
   text-align: center;
 }
 
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 
 .App-link {
   color: #61dafb;
@@ -30,7 +28,6 @@
   }
 }
 
-
 /* General Reset */
 * {
   margin: 0;
@@ -40,7 +37,7 @@
 
 /* Body Styling */
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   background-color: #f5f5f5;
 }
 
@@ -70,7 +67,7 @@ body {
   color: #ffffff;
   text-decoration: none;
   font-size: 1em;
-  padding: 10px 15px;
+  padding: 10px 12px;
   transition: background-color 0.3s ease;
   border-radius: 5px;
 }
@@ -82,53 +79,51 @@ body {
 /* Responsive Design for Small Screens */
 @media (max-width: 768px) {
   .navbar {
-      flex-direction: column;
-      align-items: flex-start;
+    /* flex-direction: column; */
+    align-items: flex-start;
   }
 
   .navbar-menu {
-      flex-direction: column;
-      width: 100%;
-      gap: 10px;
+    display: flex;
+
+    justify-content: flex-end;
+
+    gap: 1px;
   }
 
   .navbar-menu a {
-      width: 100%;
-      text-align: center;
-      cursor:progress;
+    width: 100%;
+    cursor: progress;
   }
 }
 
-
-.container{
+.container {
   display: flex;
-  flex-wrap:wrap;  
+  flex-wrap: wrap;
   justify-content: center;
   /* align-items: center; */
   margin: 22px;
 }
 
-h1{
+h1 {
   text-align: center;
   font-family: "Prompt", sans-serif;
   font-weight: 500;
   font-size: 50px;
   font-style: normal;
   margin-top: 12px;
-
 }
 
-.multi-selector{
+.multi-selector {
   margin: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   /* border: 2px solid black; */
-
 }
 
-.selectors{
-  width: 90%;
+.selectors {
+  width: 75%;
   padding: 20px;
 }
