--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   /* align-items: center; */
   margin: 22px;
@@ -115,15 +115,26 @@ h1 {
 }
 
 .multi-selector {
-  margin: 25px;
+  /* margin: 25px; */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
-  align-items: center;
+  align-items:flex-start;
+  flex-wrap: wrap;
   /* border: 2px solid black; */
 }
 
 .selectors {
-  width: 75%;
+  
   padding: 20px;
+  
+}
+
+.whole{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  
 }
