--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,15 @@ body {
     width: 100%;
     cursor: progress;
   }
+
+  
+
+
 }
 
 .container {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   justify-content: center;
   /* align-items: center; */
   margin: 22px;
@@ -120,6 +124,7 @@ h1 {
   /* flex-direction: column; */
   justify-content: center;
   align-items:flex-start;
+  /* align-items: center; */
   flex-wrap: wrap;
   /* border: 2px solid black; */
 }
@@ -137,4 +142,8 @@ h1 {
   align-items: center;
   padding: 20px;
   
+}
+
+.total{
+  margin-top: 70px;
 }
